# rospi

./: README.md  README.txt
Diagrams/: Architecture.drawio
RPi_ws/: hostapd.conf
RPi_ws/desktop/: blink.c  camera.py  gpio.py
RPi_ws/desktop/cobra/: battery_i2c_test.py  camera_stream.sh  cobra.py  i2c_test.py  lis3mdl.py  lps25hb.py  lsm6ds33.py  main.py  main_old.py  motor_left.py  motor_right.py  motor_start.py  motor_stop.py  netcat.sh  sensors.py
RPi_ws/src/: car.launch
RPi_ws/src/communication_test/: CMakeLists.txt  package.xml
RPi_ws/src/imu_driver/: CMakeLists.txt  package.xml
RPi_ws/src/imu_driver/src/: main.cpp
RPi_ws/src/motor/: CMakeLists.txt  package.xml
RPi_ws/src/motor/src/: motor.py
laptop_ws/src/: keyboard_ctrl.launch
laptop_ws/src/communication/: CMakeLists.txt  package.xml
laptop_ws/src/controller/: CMakeLists.txt  package.xml
laptop_ws/src/controller/msg/: IronCar.msg
laptop_ws/src/controller/src/: keyboard_ctrl.cpp
